Revert "Fix domain badge vertical alignment"
This reverts commit a1aee29670d5203636e2c20e5c8b734e12ce80dd.

--- a/client/components/domains/domain-suggestion/style.scss
+++ b/client/components/domains/domain-suggestion/style.scss
@@ -332,7 +332,9 @@ body.is-section-signup.is-white-signup {
 		}
 
 		@include break-wide {
-			margin: auto 0 auto 12px;
+			align-self: baseline;
+			margin-left: 12px;
+			margin-bottom: 0;
 			flex: 1;
 		}
 	}
